# rosia-py

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
benchmark/: docker-compose.yml  ros2.dockerfile
benchmark/benchmarks/: rclpy_bench.py  rosia_bench.py  run_benchmarks.py
docs/: .prettierrc  README.md  docusaurus.config.ts  eslint.config.mjs  package.json
docs/blog/: 2026-03-09.md  authors.yml  tags.yml
docs/docs/: quick-start.md
examples/: bouncing_ball.py  bouncing_ball_sync.py  chain.py  hello.py  loop.py  loop_logical.py  parallel_timer.py  physical_trigger.py  signal_processing.py  skiing.py  synchronization.py  timer.py
examples/tools/: input.py  keyboard.py
rosia/: __init__.py
rosia/config/: ExecutionConfig.py  __init__.py
rosia/coordinate/: Application.py  Coordinator.py  Events.py  Node.py  Port.py  Reaction.py
rosia/diagram/: __init__.py  constants.py  diagram.py  renderer.py  rerun_renderer.py  svg_renderer.py
rosia/execute/: Executor.py  Messages.py
rosia/frontend/: Annotators.py  Connection.py  Node.py  Port.py  __init__.py
rosia/logging/: __init__.py
rosia/rerun/: __init__.py  rerun.py
rosia/time/: Time.py  Timer.py  __init__.py  utils.py
rosia/tools/: Input.py  Keystroke.py  Printer.py  __init__.py
rosia/utils/: Analyze.py  ClassHelper.py  Stubs.py  __init__.py
tests/: test.py
tests/advance_time/: _advance_time_same_timestamp.py
tests/examples/: _port_retain.py  easy.py  parallel_timed_interleave.py  test_chain.py  test_easy.py  test_external_port.py  test_init.py  test_log_level.py  test_logger.py  test_loop.py  test_parallel.py  test_parallel_fail.py  test_parallel_timed.py  test_parallel_timed_interleave.py  test_shutdown.py  test_timer_chain.py
tests/execute/: test_double.py
tests/logging/: _e2e_chain.py
tests/shutdown/: _timed_shutdown.py
(+60 files in other folders)
