[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rosia"
version = "0.0.4"
authors = [
  { name="depetrol", email="depetrol@outlook.com" },
]
description = "A robotic middleware in Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pyzmq",
    "cloudpickle",
]

[dependency-groups]
dev = [
    "pre-commit",
    "twine",
    "build",
    "pytest",
    "pytest-timeout",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[project.urls]
Homepage = "https://github.com/rosia-project/rosia"
Issues = "https://github.com/rosia-project/rosia/issues"