[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rosia"
version = "0.0.7"
authors = [
  { name="depetrol", email="depetrol@outlook.com" },
]
description = "A robotic middleware in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pyzmq",
    "cloudpickle",
    "pyelk",
    "rich",
    "pydantic",
    "rerun-sdk",
]

[dependency-groups]
dev = [
    "pre-commit",
    "twine",
    "build",
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-n auto"
filterwarnings = [
    "error",
]

[project.urls]
Homepage = "https://github.com/rosia-project/rosia"
Issues = "https://github.com/rosia-project/rosia/issues"